@@ -9,6 +9,7 @@ import greencity.dto.employee.EmployeeDto;
 import greencity.dto.position.PositionDto;
 import greencity.dto.tariff.GetTariffInfoForEmployeeDto;
 import greencity.entity.user.employee.Employee;
+import greencity.enums.EmployeeStatus;
 import org.modelmapper.AbstractConverter;
 import org.springframework.stereotype.Component;
 import java.util.stream.Collectors;
@@ -25,6 +26,7 @@ public class EmployeeWithTariffsDtoMapper extends AbstractConverter<Employee, Em
                 .email(employee.getEmail())
                 .phoneNumber(employee.getPhoneNumber())
                 .image(employee.getImagePath())
+                .employeeStatus(EmployeeStatus.ACTIVE)
                 .employeePositions(employee.getEmployeePosition().stream()
                     .map(position -> PositionDto.builder()
                         .id(position.getId())
@@ -33,33 +35,34 @@ public class EmployeeWithTariffsDtoMapper extends AbstractConverter<Employee, Em
                         .build())
                     .collect(Collectors.toList()))
                 .build())
-            .tariffs(employee.getTariffInfos().stream()
+            .tariffs(employee.getTariffsInfoReceivingEmployees().stream()
                 .map(getTariffs -> GetTariffInfoForEmployeeDto.builder()
-                    .id(getTariffs.getId())
-                    .region(getTariffs.getTariffLocations().stream().map(
+                    .id(getTariffs.getTariffsInfo().getId())
+                    .hasChat(getTariffs.getHasChat())
+                    .region(getTariffs.getTariffsInfo().getTariffLocations().stream().map(
                         tariffLocation -> RegionDto.builder()
                             .regionId(tariffLocation.getLocation().getRegion().getId())
                             .nameUk(tariffLocation.getLocation().getRegion().getUkrName())
                             .nameEn(tariffLocation.getLocation().getRegion().getEnName())
                             .build())
-                        .toList().getFirst())
-                    .locationsDtos(getTariffs.getTariffLocations().stream()
+                        .collect(Collectors.toList()).get(0))
+                    .locationsDtos(getTariffs.getTariffsInfo().getTariffLocations().stream()
                         .map(tariffLocation -> LocationsDtos.builder()
                             .locationId(tariffLocation.getLocation().getId())
                             .nameUk(tariffLocation.getLocation().getNameUk())
                             .nameEn(tariffLocation.getLocation().getNameEn())
                             .build())
                         .collect(Collectors.toList()))
-                    .receivingStationDtos(getTariffs.getReceivingStationList().stream()
+                    .receivingStationDtos(getTariffs.getTariffsInfo().getReceivingStationList().stream()
                         .map(receivingStation -> GetReceivingStationDto.builder()
                             .stationId(receivingStation.getId())
                             .name(receivingStation.getName())
                             .build())
                         .collect(Collectors.toList()))
                     .courier(CourierTranslationDto.builder()
-                        .id(getTariffs.getCourier().getId())
-                        .nameEn(getTariffs.getCourier().getNameEn())
-                        .nameUk(getTariffs.getCourier().getNameUk()).build())
+                        .id(getTariffs.getTariffsInfo().getCourier().getId())
+                        .nameEn(getTariffs.getTariffsInfo().getCourier().getNameEn())
+                        .nameUk(getTariffs.getTariffsInfo().getCourier().getNameUk()).build())
                     .build())
                 .collect(Collectors.toList()))
             .build();
